--- a/style.css
+++ b/style.css
@@ -1,4 +1,17 @@
+*
+{
+  box-sizing: border-box; 
+}
+
 img {
     width: 100%;
   }
   
+.container
+{
+    display: grid;
+    /* grid-template-columns: auto auto auto; */
+    grid-template-columns: minmax(100px,350px) 1fr minmax(100px, 350px);
+    /* grid-template-rows: auto auto auto; */
+    gap: 10px;
+}
